--- a/src/app/components/opcao/opcao.component.html
+++ b/src/app/components/opcao/opcao.component.html
@@ -340,7 +340,7 @@
         <br/>
 
         <mat-card-content>
-          <form #formOpcao="ngForm" (submit)="onSubmit()">
+          <form #formOpcao="ngForm">
             <mat-card>
               <mat-card-title>Tabela</mat-card-title>
               <br/>
