--- a/src/app/components/usuario/usuario.component.html
+++ b/src/app/components/usuario/usuario.component.html
@@ -72,7 +72,7 @@
         <br/>
 
         <mat-card-content>
-          <form #usuarioForm="ngForm" (submit)="onSubmit()">
+          <form #usuarioForm="ngForm">
             <mat-form-field appearance="outline" style="width: 100%">
               <mat-label>Nome</mat-label>
               <input matInput placeholder="Nome" [disabled]="!adicionandoUsuario() && !editandoUsuario()"
