--- a/src/app/components/entidade/entidade.component.html
+++ b/src/app/components/entidade/entidade.component.html
@@ -67,7 +67,7 @@
         <br/>
 
         <mat-card-content>
-          <form #formEntidade="ngForm" (submit)="onSubmit()">
+          <form #formEntidade="ngForm">
             <mat-form-field appearance="outline" style="width: 100%">
               <mat-label>Nome</mat-label>
               <input matInput placeholder="Nome" name="nome" [disabled]="!adicionandoEntidade() && !editandoEntidade()"
