--- a/src/app/components/hospital/hospital.component.html
+++ b/src/app/components/hospital/hospital.component.html
@@ -72,7 +72,7 @@
         <br/>
 
         <mat-card-content>
-          <form #formHospital="ngForm" (submit)="onSubmit()">
+          <form #formHospital="ngForm">
             <mat-form-field appearance="outline" style="width: 100%">
               <mat-label>Nome</mat-label>
               <input matInput placeholder="Nome" name="nome" [disabled]="!adicionandoHospital() && !editandoHospital()"
