adm | detalhes em cotacao.component.html

--- a/src/app/components/cotacao/cotacao.component.html
+++ b/src/app/components/cotacao/cotacao.component.html
@@ -254,7 +254,14 @@
 
                 <ng-container matColumnDef="administradora" sticky>
                   <mat-header-cell *matHeaderCellDef mat-sort-header> Administradora </mat-header-cell>
-                  <mat-cell *matCellDef="let cotacao" [style.color]="'white'" [style.background-color]="cotacao.tabela.operadora.cor" class="mouse-pointer"> {{cotacao.tabela.administradora?.nome}} </mat-cell>
+                  <mat-cell *matCellDef="let cotacao" [style.color]="'white'" [style.background-color]="cotacao.tabela.operadora.cor" class="mouse-pointer">
+                    <span *ngIf="cotacao.tabela.categoria === 'Adesão'">
+                      {{cotacao.tabela.administradora?.nome}}
+                    </span>
+                        <span *ngIf="cotacao.tabela.categoria === 'Empresarial'">
+                     {{cotacao.tabela.contemplaMEI ? 'Mei' : ''}} {{cotacao.tabela.livreAdesao ? cotacao.tabela.contemplaMEI ? ' | LA' : 'LA' : ''}} {{cotacao.tabela.compulsoria ? (cotacao.tabela.contemplaMEI || cotacao.tabela.livreAdesao) ? ' | Comp' : 'Comp' : ''}}
+                    </span>
+                  </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="operadora">
@@ -417,7 +424,14 @@
 
                 <ng-container matColumnDef="administradora" sticky>
                   <mat-header-cell *matHeaderCellDef mat-sort-header> Administradora </mat-header-cell>
-                  <mat-cell *matCellDef="let cotacao" [style.color]="'white'" [style.background-color]="cotacao.tabela.operadora.cor" class="mouse-pointer"> {{cotacao.tabela.administradora?.nome}} </mat-cell>
+                  <mat-cell *matCellDef="let cotacao" [style.color]="'white'" [style.background-color]="cotacao.tabela.operadora.cor" class="mouse-pointer">
+                    <span *ngIf="cotacao.tabela.categoria === 'Adesão'">
+                      {{cotacao.tabela.administradora?.nome}}
+                    </span>
+                    <span *ngIf="cotacao.tabela.categoria === 'Empresarial'">
+                     {{cotacao.tabela.contemplaMEI ? 'Mei' : ''}} {{cotacao.tabela.livreAdesao ? cotacao.tabela.contemplaMEI ? ' | LA' : 'LA' : ''}} {{cotacao.tabela.compulsoria ? (cotacao.tabela.contemplaMEI || cotacao.tabela.livreAdesao) ? ' | Comp' : 'Comp' : ''}}
+                    </span>
+                  </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="operadora">
@@ -580,7 +594,14 @@
 
                 <ng-container matColumnDef="administradora" sticky>
                   <mat-header-cell *matHeaderCellDef mat-sort-header> Administradora </mat-header-cell>
-                  <mat-cell *matCellDef="let cotacao" [style.color]="'white'" [style.background-color]="cotacao.tabela.operadora.cor" class="mouse-pointer"> {{cotacao.tabela.administradora?.nome}} </mat-cell>
+                  <mat-cell *matCellDef="let cotacao" [style.color]="'white'" [style.background-color]="cotacao.tabela.operadora.cor" class="mouse-pointer">
+                    <span *ngIf="cotacao.tabela.categoria === 'Adesão'">
+                      {{cotacao.tabela.administradora?.nome}}
+                    </span>
+                    <span *ngIf="cotacao.tabela.categoria === 'Empresarial'">
+                     {{cotacao.tabela.contemplaMEI ? 'Mei' : ''}} {{cotacao.tabela.livreAdesao ? cotacao.tabela.contemplaMEI ? ' | LA' : 'LA' : ''}} {{cotacao.tabela.compulsoria ? (cotacao.tabela.contemplaMEI || cotacao.tabela.livreAdesao) ? ' | Comp' : 'Comp' : ''}}
+                    </span>
+                  </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="operadora">
@@ -743,7 +764,14 @@
 
                 <ng-container matColumnDef="administradora" sticky>
                   <mat-header-cell *matHeaderCellDef mat-sort-header> Administradora </mat-header-cell>
-                  <mat-cell *matCellDef="let cotacao" [style.color]="'white'" [style.background-color]="cotacao.tabela.operadora.cor" class="mouse-pointer"> {{cotacao.tabela.administradora?.nome}} </mat-cell>
+                  <mat-cell *matCellDef="let cotacao" [style.color]="'white'" [style.background-color]="cotacao.tabela.operadora.cor" class="mouse-pointer">
+                    <span *ngIf="cotacao.tabela.categoria === 'Adesão'">
+                      {{cotacao.tabela.administradora?.nome}}
+                    </span>
+                    <span *ngIf="cotacao.tabela.categoria === 'Empresarial'">
+                     {{cotacao.tabela.contemplaMEI ? 'Mei' : ''}} {{cotacao.tabela.livreAdesao ? cotacao.tabela.contemplaMEI ? ' | LA' : 'LA' : ''}} {{cotacao.tabela.compulsoria ? (cotacao.tabela.contemplaMEI || cotacao.tabela.livreAdesao) ? ' | Comp' : 'Comp' : ''}}
+                    </span>
+                  </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="operadora">
