corrigindo ordenaçao nas colunas em produto.component.html

--- a/src/app/components/produto/produto.component.html
+++ b/src/app/components/produto/produto.component.html
@@ -486,30 +486,8 @@
             <div class="flex-container" style="flex-direction: row">
               <mat-card style="width: 100%">
                 <mat-card-content>
-                  <div [hidden]="editandoProduto() || adicionandoProduto()">
+                  <div>
                     <mat-table #sortLaboratorio="matSort" [dataSource]="dataSourceLaboratorio" matSort class="mat-elevation-z8">
-                      <ng-container matColumnDef="idLaboratorio">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
-                        <mat-cell *matCellDef="let laboratorio"> {{laboratorio.id}} </mat-cell>
-                      </ng-container>
-
-                      <ng-container matColumnDef="nomeLaboratorio">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Nome </mat-header-cell>
-                        <mat-cell *matCellDef="let laboratorio"> {{laboratorio.nome}} </mat-cell>
-                      </ng-container>
-
-                      <ng-container matColumnDef="localLaboratorio">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Local </mat-header-cell>
-                        <mat-cell *matCellDef="let laboratorio"> {{laboratorio.local}} </mat-cell>
-                      </ng-container>
-
-                      <mat-header-row *matHeaderRowDef="['idLaboratorio', 'nomeLaboratorio', 'localLaboratorio']"></mat-header-row>
-                      <mat-row *matRowDef="let row; columns: ['idLaboratorio', 'nomeLaboratorio', 'localLaboratorio'];"></mat-row>
-                    </mat-table>
-                    <mat-paginator #paginatorLaboratorio [pageSizeOptions]="[10, 50, 100]" [length]="dataSourceLaboratorio.data.length" showFirstLastButtons></mat-paginator>
-                  </div>
-                  <div [hidden]="!editandoProduto() && !adicionandoProduto()">
-                    <mat-table #sortLaboratorioEditando="matSort" [dataSource]="dataSourceLaboratorio" matSort class="mat-elevation-z8">
                       <ng-container matColumnDef="idLaboratorio">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
                         <mat-cell *matCellDef="let laboratorio" (click)="laboratorio.selected = !laboratorio.selected" class="mouse-pointer"> {{laboratorio.id}} </mat-cell>
@@ -534,11 +512,11 @@
                         </mat-cell>Hospital
                       </ng-container>
 
-                      <mat-header-row *matHeaderRowDef="['idLaboratorio', 'nomeLaboratorio', 'localLaboratorio', 'selected']"></mat-header-row>
-                      <mat-row *matRowDef="let row; columns: ['idLaboratorio', 'nomeLaboratorio', 'localLaboratorio', 'selected'];"></mat-row>
+                      <mat-header-row *matHeaderRowDef="getColumnsLaboratorio()"></mat-header-row>
+                      <mat-row *matRowDef="let row; columns: getColumnsLaboratorio();"></mat-row>
 
                     </mat-table>
-                    <mat-paginator #paginatorLaboratorioEditando [pageSizeOptions]="[10, 50, 100]" [length]="dataSourceLaboratorio.data.length" showFirstLastButtons></mat-paginator>
+                    <mat-paginator #paginatorLaboratorio [pageSizeOptions]="[10, 50, 100]" [length]="dataSourceLaboratorio.data.length" showFirstLastButtons></mat-paginator>
                   </div>
                   </mat-card-content>
               </mat-card>
@@ -558,31 +536,8 @@
             <div class="flex-container" style="flex-direction: row">
               <mat-card style="width: 100%">
                 <mat-card-content>
-                  <div [hidden]="editandoProduto() || adicionandoProduto()">
+                  <div>
                     <mat-table #sortHospital="matSort" [dataSource]="dataSourceHospital" matSort class="mat-elevation-z8">
-                      <ng-container matColumnDef="idHospital">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
-                        <mat-cell *matCellDef="let hospital"> {{hospital.id}} </mat-cell>
-                      </ng-container>
-
-                      <ng-container matColumnDef="nomeHospital">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Nome </mat-header-cell>
-                        <mat-cell *matCellDef="let hospital"> {{hospital.nome}} </mat-cell>
-                      </ng-container>
-
-                      <ng-container matColumnDef="localHospital">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Local </mat-header-cell>
-                        <mat-cell *matCellDef="let hospital"> {{hospital.local}} </mat-cell>
-                      </ng-container>
-
-                      <mat-header-row *matHeaderRowDef="['idHospital', 'nomeHospital', 'localHospital']"></mat-header-row>
-                      <mat-row *matRowDef="let row; columns: ['idHospital', 'nomeHospital', 'localHospital'];"></mat-row>
-
-                    </mat-table>
-                    <mat-paginator #paginatorHospital [pageSizeOptions]="[10, 50, 100]" [length]="dataSourceHospital.data.length" showFirstLastButtons></mat-paginator>
-                  </div>
-                  <div [hidden]="!editandoProduto() && !adicionandoProduto()">
-                    <mat-table #sortHospitalEditando="matSort" [dataSource]="dataSourceHospital" matSort class="mat-elevation-z8">
                       <ng-container matColumnDef="idHospital">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
                         <mat-cell *matCellDef="let hospital" (click)="hospital.selected = !hospital.selected" class="mouse-pointer"> {{hospital.id}} </mat-cell>
@@ -607,11 +562,11 @@
                         </mat-cell>
                       </ng-container>
 
-                      <mat-header-row *matHeaderRowDef="['idHospital', 'nomeHospital', 'localHospital', 'selected']"></mat-header-row>
-                      <mat-row *matRowDef="let row; columns: ['idHospital', 'nomeHospital', 'localHospital', 'selected'];"></mat-row>
+                      <mat-header-row *matHeaderRowDef="getColumnsHospital()"></mat-header-row>
+                      <mat-row *matRowDef="let row; columns: getColumnsHospital();"></mat-row>
 
                     </mat-table>
-                    <mat-paginator #paginatorHospitalEditando [pageSizeOptions]="[10, 50, 100]" [length]="dataSourceHospital.data.length" showFirstLastButtons></mat-paginator>
+                    <mat-paginator #paginatorHospital [pageSizeOptions]="[10, 50, 100]" [length]="dataSourceHospital.data.length" showFirstLastButtons></mat-paginator>
                   </div>
                 </mat-card-content>
               </mat-card>
